# wright

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  QUESTIONS.md  README.md  ROADMAP.md
crates/wright-anim/: Cargo.toml
crates/wright-anim/examples/: rig_check.rs
crates/wright-anim/src/: fbx_load.rs  gltf_load.rs  lib.rs  rig.rs
crates/wright-app/: Cargo.toml
crates/wright-app/src/: main.rs  modes.rs  state.rs
crates/wright-app/src/anim/: mod.rs
crates/wright-app/src/dungeon/: mod.rs
crates/wright-app/src/island/: doc.rs  mod.rs
crates/wright-app/src/placement/: mod.rs
crates/wright-app/src/render/: camera.rs  scene.rs  scene.wgsl
crates/wright-bestow/: Cargo.toml
crates/wright-bestow/examples/: import_check.rs  sculpt_export.rs
crates/wright-bestow/src/: lib.rs  scene.rs
crates/wright-dungeon/: Cargo.toml
crates/wright-dungeon/examples/: export_demo.rs
crates/wright-dungeon/src/: export.rs  glb.rs  lib.rs  meshgen.rs
crates/wright-field/: Cargo.toml
crates/wright-field/src/: brush.rs  lib.rs  mesh.rs  pick.rs
