[package]
name = "wright-field"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Heightfield document model: brush sculpting, material masks, meshing, picking"

[dependencies]
glam.workspace = true
serde.workspace = true
bytemuck = { version = "1", features = ["derive"] }
